# pt_controller

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-esp32.sh  dummy.cpp  run-esp32.sh
app/: CMakeLists.txt  connect.c  controller.cpp  device_info.hpp  main.cpp  portal.c  root.html  sdkconfig
buildscripts/: build-esp32.sh  run-esp32.sh  setup_esp_env.sh
data/: index.html
hardware/pt_board/: README.md  components.csv  pt_board.kicad_prl  pt_board.kicad_pro  pt_board.kicad_sch  pt_board_symbols.kicad_sym  sym-lib-table
lib/: CMakeLists.txt
lib/containers/: CMakeLists.txt
lib/containers/include/: constexpr_map.hpp
lib/hal/: CMakeLists.txt
lib/hal/include/: gpio.hpp  pwm.hpp
lib/hal/src/: gpio.cpp  pwm.cpp
lib/http_server_wrapper/: CMakeLists.txt
lib/http_server_wrapper/include/: http_server_wrapper.hpp
lib/http_server_wrapper/src/: http_server_wrapper.cpp
lib/motor_controller/: CMakeLists.txt
lib/motor_controller/include/: bescor_mp101.hpp  motor_controller.hpp
lib/wifi/: CMakeLists.txt
lib/wifi/include/: wifi.hpp
lib/wifi/src/: wifi.cpp
scripts/: install_esp_idf.sh  setup_env.sh
scripts/mqtt_python/: mqtt-test-client.py  mqtt-test-pub.py  setup_mqtt.sh
server/static/js/: generateHtml.mjs  node_info.mjs  utils.mjs
software/interface/esp32/: sdkconfig
udev_rules/: 50-ttyusb.rules
